Bug 159313 - Saving word completion options is broken
Summary: Saving word completion options is broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.0.3
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2024-01-21 20:51 UTC by Mike Kaganski
Modified: 2024-01-24 15:58 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-01-21 20:51:37 UTC
Since commit c4fc18308074634e9578ad12d94d937f259aa22a (Autocorrect: Add option for autoformat bulleted lists after space, 2023-09-07), changing word completion checkboxes (Enable word completion, Append space, Show tooltip) or min. word length, pressing OK, and restarting LibreOffice gives the old values, or some unexpected values.
Comment 1 Mike Kaganski 2024-01-22 06:13:58 UTC
https://gerrit.libreoffice.org/c/core/+/162359
Comment 2 Commit Notification 2024-01-22 07:37:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca33b8b35a10243dc13e68c93e7c7512eef937ec

tdf#159313: pass properties in correct order

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-01-22 23:27:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/0455f4c13c5e0d055c92f84c3e71aad32a062a35

tdf#159313: pass properties in correct order

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-01-24 08:21:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-0":

https://git.libreoffice.org/core/commit/81b59e7d7eb35fd0e707a04ef926a97ae9be86df

tdf#159313: pass properties in correct order

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.